fix numbers being cut off

--- a/css/src.css
+++ b/css/src.css
@@ -171,6 +171,7 @@
       @apply mb-0 mt-2;
     }
     ol {
+      padding-left: 1.5rem;
       @apply list-decimal;
     }
     li {
