--- a/mobile/src/src.css
+++ b/mobile/src/src.css
@@ -169,6 +169,7 @@
       @apply mb-0 mt-2;
     }
     ol {
+      padding-left: 1.5rem;
       @apply list-decimal;
     }
     li {
